[package]
name = "db-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.2.0"
dotenv = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio","postgres", "tls-rustls"] }
